2011-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (verify_agent_omp, delete_report_format_omp)
	(verify_report_format_omp): Correct message typos.

2011-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-table, get_trash): Use "Scan Config"
	instead of "Config" for consistency.

2011-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-table): Remove surplus } characters.

2011-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_post): At least survive if the caller param is
	missing.

2011-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (user): Switch the delete_user icon to POST.

2011-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-table): Pass task_id and overrides params
	to note and override templates explicitly, instead of bundling them in the
	next param, which only works for GET.
	(note, override): Add params and params-get parameters.

2011-05-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (exec_omp_post): Remove delete_note override requirement, as
	it's optional.  Validate task_id too for delete_report.  Add save_note
	and save_override NULL param checks that where previously done in
	exec_omp_get.

	* src/gsad_oap.c (delete_user_oap): Add NULL param check that was
	done in exec_omp_get when this was a GET.

	* src/gsad_omp.c: Add NULL param checks to the new POST commands.  These
	were done in exec_omp_get when the commands were GET operations.

2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (delete_note_omp, delete_override_omp): Revert erroneous
	NULL checks added when switching the delete_* commands to POST.

2011-05-17  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Add missing filtering params to